simple_http/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: simple-http
spec:
  replicas: 1
  selector:
    matchLabels:
      app: simple-http
  template:
    metadata:
      labels:
        app: simple-http
    spec:
      volumes:
        - name: simple-http-volume
          persistentVolumeClaim:
            claimName: simple-http-pvc-1-13
      containers:
        - name: simple-http
          image: xuanminator/simple-http:1.13
          imagePullPolicy: Always
          volumeMounts:
          - name: simple-http-volume
            mountPath: /tmp/simple-http
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
