simple_http/manifests/pg-stset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: simple-http-pg-stset
spec:
  serviceName: simple-http-pg-svc
  replicas: 1
  selector:
    matchLabels:
      app: postgres
  template:
    metadata:
      labels:
        app: postgres
    spec:
      containers:
        # persistence
        - name: postgres
          image: postgres:13
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: simple-http-pg-data
              mountPath: /var/lib/postgresql/data
              subPath: postgres
  volumeClaimTemplates:
    - metadata:
        name: simple-http-pg-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 100Mi
