simple_http/manifests/statefulset.yaml
apiVersion: apps/v1
kind: StatefulSet
metadata:
  namespace: project
  name: simple-http-stset
spec:
  serviceName: simple-http-pg-svc
  replicas: 1
  selector:
    matchLabels:
      app: simple-http
  template:
    metadata:
      labels:
        app: simple-http
    spec:
      volumes:
        - name: simple-http-volume
          persistentVolumeClaim:
            claimName: simple-http-pvc-2-4
      containers:
        # static server
        - name: simple-http-static
          image: xuanminator/simple-http:2.9-static
          imagePullPolicy: Always
          volumeMounts:
            - name: simple-http-volume
              mountPath: /tmp/simple-http
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
        # Container for the api server
        - name: simple-http-api
          image: xuanminator/simple-http:2.10-api
          imagePullPolicy: Always
          resources:
            requests:
              cpu: "100m"
              memory: "64Mi"
            limits:
              cpu: "200m"
              memory: "128Mi"
        # persistence
        - name: postgres
          image: postgres:13
          ports:
            - name: postgres
              containerPort: 5432
          volumeMounts:
            - name: simple-http-pg-data
              mountPath: /var/lib/postgresql/data
  volumeClaimTemplates:
    - metadata:
        name: simple-http-pg-data
      spec:
        accessModes: ["ReadWriteOnce"]
        storageClassName: local-path
        resources:
          requests:
            storage: 100Mi
