simple_http/manifests/redis.yaml
# stable DNS redis-0.redis.project.svc.cluster.local
apiVersion: v1
kind: Service
metadata:
  name: redis
  namespace: project # <-- same namespace as your apps
  labels:
    app: redis
spec:
  clusterIP: None # headless ⇒ pod-specific DNS
  ports:
    - name: redis
      port: 6379 # service port
      targetPort: 6379 # container port
  selector:
    app: redis

---
# single-node Redis with an RWO PVC per replica
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: redis
  namespace: project
spec:
  serviceName: redis
  replicas: 1
  selector:
    matchLabels:
      app: redis
  template:
    metadata:
      labels:
        app: redis
    spec:
      containers:
        - name: redis
          image: redis
          ports:
            - containerPort: 6379
              name: redis
          command: ["redis-server", "--appendonly", "yes"]
          volumeMounts:
            - name: redis-data
              mountPath: /data
  volumeClaimTemplates:
    - metadata:
        name: redis-data
      spec:
        accessModes: ["ReadWriteOnce"]
        resources:
          requests:
            storage: 300Mi
