simple_http/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: simple-http-svc
# for ingress
spec:
  type: NodePort
  selector:
    app: simple-http
  ports:
    - port: 2345
      name: static
      protocol: TCP
      targetPort: 8060
    - port: 2346
      name: api
      protocol: TCP
      targetPort: 8061
---
# headless no clusterip
apiVersion: v1
kind: Service
metadata:
  namespace: project
  name: simple-http-pg-svc
  labels:
    app: simple-http
spec:
  ports:
    - port: 5432
      name: postgres
      targetPort: 5432
  clusterIP: None
  # not in the same pod!
  selector:
    app: postgres
