simple_http/manifests/ingress.yaml
# ingress
# route to service

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: simple-http-ingress
spec:
  rules:
  - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: simple-http-svc
            port: 
              number: 2345
      - path: /todos
        pathType: Prefix
        backend:
          service:
            name: simple-http-svc
            port:
              number: 2346
